<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="137dp"
            android:layout_height="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.053"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/imagelogodesc" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="237dp"
            android:layout_height="48dp"
            android:text="@string/_375_29_631_00_01"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCall"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="237dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_375_44_534_00_01"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCall" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="175dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="604dp" />

        <ImageView
            android:id="@+id/imageCall"
            android:layout_width="126dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/call"
            android:contentDescription="@string/calldesc" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="266dp"
            android:layout_height="123dp"
            android:text="@string/Slogan"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageLogo"
            app:layout_constraintTop_toTopOf="@+id/imageLogo" />


</androidx.constraintlayout.widget.ConstraintLayout>